z-index fix

--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -6,6 +6,7 @@ header {
     nav {
         position: fixed;
         background-color: white;
+        z-index: 3;
         top: 0;
         display: flex;
         flex-direction: row;
@@ -98,7 +99,7 @@ header {
 
     .jumbo {
         @include image;
-        height:600px;
+        height:800px;
         background-image: url("https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
         font-family: $thirdFont;
         animation: animate 16s ease-in-out infinite;
@@ -130,7 +131,7 @@ header {
             color:white;
 
             .little-title {
-                padding-top: 100px;
+                padding-top: 150px;
                 margin-bottom: 50px;
             }
 
